# IdleWizard

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.md
Assets/: Blob.piskel
Piskel/: mana_altar.piskel
src/: CameraInput.cpp  CameraInput.hpp  EntityTestState.cpp  Game.cpp  Game.h  GameOptions.h  Isometric.h  IsometricTestState.cpp  IsometricTestState.h  MathHack.hpp  MoveSystem.h  Positions.h  Random.h  Sizes.h  Timer.h  Vector2i.h  Velocities.h  Worlds.cpp  Worlds.h  main.cpp
src/Components/: Resource.h
src/ECS/: BaseComponent.h  BlobFactory.h  Component.h  ComponentManager.cpp  ComponentManager.h  ComponentType.h  ComponentUtils.h  ComponentVariant.h  Components.h  EcsManager.cpp  EcsManager.h  EntityManager.cpp  EntityManager.h  EntityToIndex.h  EntityType.h  EntityTypeMap.cpp  EntityTypeMap.h  System.h  Systems.h  TextureData.h  TreeFactory.h  VectorComponent.h  VectorComponentUtils.cpp  VectorComponentUtils.h
src/data-structures/quad-tree/: QuadTreeVisualizer.cpp  QuadTreeVisualizer.h  TiledDataOrientedQuadTree.cpp  TiledDataOrientedQuadTree.h
src/data-structures/tile-structure/: TileIndexStructure.h  TileMap.h  TileStructure.cpp  TileStructure.h
src/entities/: ManaAltar.cpp  ManaAltar.h
src/states/: GameState.h  PlayState.cpp  PlayState.h
src/states/testing/: EcsTestState.cpp  EcsTestState.h  EntityTestState.cpp  EntityTestState.h  IsometricTestState.cpp  IsometricTestState.h  QuadTreeTestState.cpp  QuadTreeTestState.h  SpatialTestState.cpp  SpatialTestState.h  TileStructureTestState.cpp  TileStructureTestState.h
src/systems/: DebugEntityTypeMap.cpp  DebugEntityTypeMap.h  DebugHighlightEntitySystem.cpp  DebugHighlightEntitySystem.h  MoveSystem.h  RenderBlobSystem.h  RenderManaAltar.h  RenderTextureSystem.h  SystemMonitorUi.cpp  SystemMonitorUi.h  WorldToRealPosSystem.cpp  WorldToRealPosSystem.h
src/tests/data-structures/: ComponentTest.h  SpatialTest.hpp
src/tests/ecs/: ComponentTest.h  ComponentTesting.hpp  EcsManagerTest.h  EntityDeleteTest.hpp
